--- a/python_package_v1/src/package_v1/setup.cfg
+++ b/python_package_v1/src/package_v1/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = example-package-YOUR-USERNAME-HERE
 version = 0.0.1
-author = Example Author
-author_email = author@example.com
+author = Matthew Cowley
+author_email = cowley7j@gmail.com
 description = A small example package
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = https://github.com/mcow7j/Python_Package_test
 project_urls =
-    Bug Tracker = https://github.com/pypa/sampleproject/issues
+    Bug Tracker = https://github.com/mcow7j/Python_Package_test/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
